# saas-data-platform

./: .gitattributes  .gitignore  Makefile  README.md  inspect_data.py  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml
config/env/: dbx.yaml  dev.yaml  main.yaml  qa.yaml
config/tenants/: ec.yaml  gt.yaml  hn.yaml  jm.yaml  pe.yaml  sv.yaml
docs/: infra.md  observations.md  onboarding-tenant.md
mentoring/: bad_code.py  code_review.md  good_code.py
src/saas_pipeline/: __init__.py  bronze.py  cli.py  config.py  gold.py  quality.py  silver.py  spark.py
tests/: conftest.py  test_quality.py  test_silver_transforms.py
